--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   google_maps_flutter: ^2.0.11
   http: ^0.13.4
   flutter_polyline_points: ^1.0.0
+  location:
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -74,8 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
